Added version indicator and moved stats to live

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A layout example that shows off a responsive product landing page." />
+    <meta
+      name="description"
+      content="An open source blockchain transaction analyzer for the nexo.io platform. With graph generation and TX linking."
+    />
+    <meta name="robots" content="index, nofollow" />
 
     <title>Nexo Transaction Analyzer</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
@@ -154,9 +158,9 @@
               <li>❔ More sorting functions for the transactions table including an export function</li>
             </ul>
 -->
-            If you encounter any trouble feel free to send a not working .csv to hello@nexo-ta.com. It will be used in a discrete
-            manner to debug and fix the problem.
-            <br />
+            If you encounter any trouble feel free to send a not working .csv along with a brief description to
+            hello@nexo-ta.com.<br />
+            It will be used in a discrete manner to debug and fix the problem. <br />
           </div>
         </div>
 
@@ -170,21 +174,25 @@
                   We are not affiliated, associated, authorized, endorsed by, or in any way officially connected with Nexo
                   Financial LLC, or any of its subsidiaries or its affiliates. The official Nexo Financial LLC website can be
                   found at https://www.nexo.io. The name NEXO as well as related names, marks, emblems and images are registered
-                  trademarks of their respective owners.</b
-                ></p>
-                
-                <p style="font-size: 0.9em">
+                  trademarks of their respective owners.
+                </b>
+              </p>
+
+              <p style="font-size: 0.9em">
                 This website is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
                 warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
-                details.</p>
-                <p style="font-size: 0.9em">
+                details.
+              </p>
+              <p style="font-size: 0.9em">
                 Support development:<br />
                 ETH: 0x6aa9da4a0f149a140f6813cbd84e1ee2df05e76e <br />BTC: bc1q5sl35at30wtftl4je7p0pwwxhwtekfe23602tj <br />RVN:
-                RCJ92C29iZimha5H4Lw3GwKQQNiCMdd5dh</p>
+                RCJ92C29iZimha5H4Lw3GwKQQNiCMdd5dh
               </p>
+
+              <p style="font-size: 0.9em">Version 1</p>
             </div>
           </div>
-          <img src="https://api.moedog.org/count/@:testingyourmom" alt=":testingyourmom" />
+          <img src="https://api.moedog.org/count/@:nexo-ta" alt=":nexo-ta" />
           <!-- testingyourmom -->
         </div>
 
@@ -250,14 +258,30 @@
 
         <div class="pure-u-1">
           <div class="l-box-lrg">
-            <h2>Notice of Non-Affiliation and Disclaimer</h2>
+            <div class="l-box-lrg">
+              <h2>Notice of Non-Affiliation and Disclaimer</h2>
 
-            <p>
-              We are not affiliated, associated, authorized, endorsed by, or in any way officially connected with Nexo Financial
-              LLC, or any of its subsidiaries or its affiliates. The official Nexo Financial LLC website can be found at
-              https://www.nexo.io. The name NEXO as well as related names, marks, emblems and images are registered trademarks of
-              their respective owners.
-            </p>
+              <p>
+                <b>
+                  We are not affiliated, associated, authorized, endorsed by, or in any way officially connected with Nexo
+                  Financial LLC, or any of its subsidiaries or its affiliates. The official Nexo Financial LLC website can be
+                  found at https://www.nexo.io. The name NEXO as well as related names, marks, emblems and images are registered
+                  trademarks of their respective owners.</b
+                >
+              </p>
+
+              <p style="font-size: 0.9em">
+                This website is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
+                warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
+                details.
+              </p>
+              <p style="font-size: 0.9em">
+                Support development:<br />
+                ETH: 0x6aa9da4a0f149a140f6813cbd84e1ee2df05e76e <br />BTC: bc1q5sl35at30wtftl4je7p0pwwxhwtekfe23602tj <br />RVN:
+                RCJ92C29iZimha5H4Lw3GwKQQNiCMdd5dh
+              </p>
+              <p style="font-size: 0.9em">Version 1</p>
+            </div>
           </div>
           <img src="https://api.moedog.org/count/@:testingyourmom" alt=":testingyourmom" style="padding-bottom: 2px" />
         </div>
