--- a/index.html
+++ b/index.html
@@ -193,7 +193,6 @@
             </div>
           </div>
           <img src="https://api.moedog.org/count/@:nexo-ta" alt=":nexo-ta" />
-          <!-- testingyourmom -->
         </div>
 
         <div class="footer l-box is-center">
@@ -283,7 +282,7 @@
               <p style="font-size: 0.9em">Version 1</p>
             </div>
           </div>
-          <img src="https://api.moedog.org/count/@:testingyourmom" alt=":testingyourmom" style="padding-bottom: 2px" />
+          <img src="https://api.moedog.org/count/@:nexo-ta" alt=":nexo-ta" style="padding-bottom: 2px" />
         </div>
       </div>
       <div class="footer l-box is-center">
