Coinlist style update, readme update

--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
         <div class="splash">
           <h1 class="splash-head home-dropzone">Drop .csv here</h1>
           <p class="splash-subhead">
-            Your privacy matters. As this project is exposed to sensitive data, it's 100% open source. <br /><b
-              >Do not share your nexo.io login. We'll never ask for any login data or wallet access.</b
-            >
+            <b>Do not share your nexo.io login. We'll never ask for any login data or wallet access.</b>
           </p>
           <p>
             <a
