--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="splash">
           <h1 class="splash-head home-dropzone">Drop .csv here</h1>
           <p class="splash-subhead">
-            <b>Do not share your nexo.io login. We'll never ask for any login data or wallet access.</b>
+            <b>Do not share your nexo.io login. This site will never ask for any login data or wallet access.</b>
           </p>
           <p>
             <a
@@ -80,8 +80,18 @@
               rel="noopener noreferrer"
               class="pure-button pure-button-primary"
               ><i class="fab fa-github" aria-hidden="true"></i> Browse Source Code</a
-            ><br /><br /><a href="#" class="pure-button pure-button-primary" id="btnDemo"
+            ><br /><a
+              href="#"
+              class="pure-button pure-button-primary"
+              id="btnDemo"
+              style="font-size: 1em; padding-left: 15px; padding-right: 15px; margin-top: 10px"
               ><i class="far fa-play-circle" aria-hidden="true"></i> Demo</a
+            ><a
+              href="#"
+              class="pure-button pure-button-primary"
+              id="btnCurrencyTest"
+              style="font-size: 1em; padding-left: 15px; padding-right: 15px; margin-top: 10px; margin-left: 10px"
+              ><i class="far fa-play-circle" aria-hidden="true"></i> Currency Test</a
             >
           </p>
         </div>
@@ -91,7 +101,7 @@
         <div class="content">
           <h2 class="content-head is-center">Get an insight into your nexo.io account</h2>
 
-          <div class="pure-g">
+          <div class="pure-g" style="padding-left: 2%; padding-right: 2%">
             <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
               <h3 class="content-subhead">
                 <i class="fa fa-table"></i>
@@ -235,6 +245,8 @@
             <div id="coinlist-portfolio"></div>
             <h2 class="content-head is-center">Coins earned as interest (All-Time)</h2>
             <div id="coinlist-earnedInCoin"></div>
+            <h2 class="content-head is-center">Cashback earned (All-Time)</h2>
+            <div id="coinlist-cashback"></div>
           </div>
           <br /><br /><br />
         </div>
