--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
 
             Some features may not work yet. Such as:
             <ul>
+              <li>❌ Nexo Booster</li>
               <li>❌ Loan tracking</li>
               <li>❌ Handling rejected / failed transactions</li>
               <li>❌ Transactions for coins where more than one network is supported</li>
