--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <div class="is-center">
               <hr />
               <div id="overview">
-                <!--<div class="pure-u-5-5 pure-u-lg-3-4 overview-graph" id="ov-graph-portfolio"></div>-->
+                <div class="pure-u-5-5 pure-u-lg-3-4 overview-graph" id="ov-graph-portfolio"></div>
                 <div class="pure-u-5-5 pure-u-lg-1-2 overview-graph" id="ov-graph-line1"></div>
                 <div class="pure-u-5-5 pure-u-lg-1-4 overview-graph" id="ov-graph-pie1"></div>
                 <div class="pure-u-5-5 pure-u-lg-1-2 overview-graph" id="ov-graph-line2" style="margin-bottom: 2em"></div>
