Refs and pending transactions added

--- a/index.html
+++ b/index.html
@@ -154,19 +154,14 @@
             </ul>
             What does work?
             <ul>
+              <li>✅ Historic portfolio value graph generation</li>
               <li>✅ Transaction tracking</li>
-              <li>✅ Transaction linkage to blockchain explorer (TX linkage) for all currencies</li>
+              <li>✅ Transaction linkage to blockchain explorer (TX linkage)</li>
               <li>✅ Overview and graph generation</li>
               <li>✅ Coinlist, including earned in-kind</li>
               <li>✅ Portfolio value determination using exchange APIs</li>
+              <li>✅ Pending transactions</li>
             </ul>
-            <!--
-            What is planned?
-            <ul>
-              <li>❔ Portfolio value over time graph</li>
-              <li>❔ More sorting functions for the transactions table including an export function</li>
-            </ul>
--->
             If you encounter any trouble feel free to send a not working .csv along with a brief description to
             hello@nexo-ta.com.<br />
             It will be used in a discrete manner to debug and fix the problem. <br />
