--- a/index.html
+++ b/index.html
@@ -188,12 +188,15 @@
                 details.
               </p>
               <p style="font-size: 0.9em">
+                Currency exchange data provided by Coingecko, Coinbase and the European Central Bank (EUROSYSTEM).<br />
+              </p>
+              <p style="font-size: 0.9em">
                 Support development:<br />
                 ETH: 0x6aa9da4a0f149a140f6813cbd84e1ee2df05e76e <br />BTC: bc1q5sl35at30wtftl4je7p0pwwxhwtekfe23602tj <br />RVN:
                 RCJ92C29iZimha5H4Lw3GwKQQNiCMdd5dh
               </p>
 
-              <p style="font-size: 0.9em">Version 1</p>
+              <p style="font-size: 0.9em">Version 1.0.</p>
             </div>
           </div>
           <img src="https://api.moedog.org/count/@:nexo-ta" alt=":nexo-ta" />
@@ -218,7 +221,9 @@
             <div class="is-center">
               <hr />
               <div id="overview">
-                <div class="pure-u-5-5 pure-u-lg-3-4 overview-graph" id="ov-graph-portfolio"></div>
+                <div class="pure-u-5-5 pure-u-lg-3-4 overview-graph" id="ov-graph-portfolio">
+                  <div id="portfolio-loader" class="lds-dual-ring"><br /><br /><br /><br /><br /><br /></div>
+                </div>
                 <div class="pure-u-5-5 pure-u-lg-1-2 overview-graph" id="ov-graph-line1"></div>
                 <div class="pure-u-5-5 pure-u-lg-1-4 overview-graph" id="ov-graph-pie1"></div>
                 <div class="pure-u-5-5 pure-u-lg-1-2 overview-graph" id="ov-graph-line2" style="margin-bottom: 2em"></div>
