GBP is now supported.

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
 
             Some features may not work yet. Such as:
             <ul>
+              <li>❌ Nexo Card</li>
               <li>❌ Nexo Booster</li>
               <li>❌ Loan tracking</li>
               <li>❌ Handling rejected / failed transactions</li>
@@ -160,6 +161,7 @@
               <li>✅ Overview and graph generation</li>
               <li>✅ Coinlist, including earned in-kind</li>
               <li>✅ Portfolio value determination using exchange APIs</li>
+              <li>✅ Referral Bonus</li>
               <li>✅ Pending transactions</li>
             </ul>
             If you encounter any trouble feel free to send a not working .csv along with a brief description to
@@ -188,7 +190,7 @@
                 details.
               </p>
               <p style="font-size: 0.9em">
-                Currency exchange data provided by Coingecko, Coinbase and the European Central Bank (EUROSYSTEM).<br />
+                Currency exchange data is provided by Coingecko, Coinbase and the European Central Bank (EUROSYSTEM).<br />
               </p>
               <p style="font-size: 0.9em">
                 Support development:<br />
@@ -286,11 +288,15 @@
                 details.
               </p>
               <p style="font-size: 0.9em">
+                Currency exchange data is provided by Coingecko, Coinbase and the European Central Bank (EUROSYSTEM).<br />
+              </p>
+              <p style="font-size: 0.9em">
                 Support development:<br />
                 ETH: 0x6aa9da4a0f149a140f6813cbd84e1ee2df05e76e <br />BTC: bc1q5sl35at30wtftl4je7p0pwwxhwtekfe23602tj <br />RVN:
                 RCJ92C29iZimha5H4Lw3GwKQQNiCMdd5dh
               </p>
-              <p style="font-size: 0.9em">Version 1</p>
+
+              <p style="font-size: 0.9em">Version 1.0.</p>
             </div>
           </div>
           <img src="https://api.moedog.org/count/@:nexo-ta" alt=":nexo-ta" style="padding-bottom: 2px" />
