--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
             If you encounter any trouble feel free to send a not working .csv along with a brief description to
             hello@nexo-ta.com.<br />
             It will be used in a discrete manner to debug and fix the problem. <br />
+            You can also open an issue on Github.
           </div>
         </div>
 
