--- a/html-draw/index.html
+++ b/html-draw/index.html
@@ -13,132 +13,92 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./general.css" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./start.css" />
     <link rel="stylesheet" href="./queries.css" />
   </head>
 
   <body>
-    <!-- Sidebar -->
-    <aside class="sidebar">
-      <p class="sidebar-logo">nexo-ta.com</p>
-      <div class="sidebar-list">
-        <ul>
-          <p>Menu</p>
-          <li>
-            <button class="sidebar-item">
-              <i class="ph-house-line-light"></i>Home
-            </button>
-          </li>
-          <li>
-            <button class="sidebar-item">
-              <i class="ph-gauge-light"></i>Overview
-            </button>
-          </li>
-          <li>
-            <button class="sidebar-item">
-              <i class="ph-coins-light"></i>Coinlist
-            </button>
-          </li>
-          <li>
-            <button class="sidebar-item">
-              <i class="ph-list-checks-light"></i>Transactions
-            </button>
-          </li>
-        </ul>
-        <ul>
-          <p>Actions</p>
-          <li>
-            <button class="sidebar-item">
-              <i class="ph-floppy-disk-light"></i> Save
-            </button>
-          </li>
-          <li>
-            <button class="sidebar-item">
-              <i class="ph-trash-light"></i> Delete
-            </button>
-          </li>
-          <li>
-            <button class="sidebar-item">
-              <i class="ph-sign-out-light"></i> Exit
-            </button>
-          </li>
-        </ul>
-      </div>
-      <div></div>
-    </aside>
-
     <!-- Content area -->
     <div class="content-area hide-scrollbar">
       <!-- Content -->
       <div class="content">
         <!-- Heading -->
         <header class="header">
-          <button class="btn-mobile-nav">
-            <i class="ph-list-light btn-mobile-nav--icon" name="open"></i>
-            <i class="ph-x-light btn-mobile-nav--icon" name="close"></i>
-          </button>
-          <h1 class="heading-primary">Overview</h1>
+          <h1 class="heading-primary">nexo-ta.com</h1>
+          <p class="subheading">
+            An analytical tool for the nexo.io lending plattform.
+          </p>
         </header>
         <!-- Main content -->
         <main class="main">
-          <div class="grid grid--4-cols">
-            <div class="card card--overview card--full-width">
-              <p class="subheading">Total net value</p>
-              <p>I am a large column</p>
-            </div>
-            <div class="card card--overview">
-              <p class="subheading">Total net value</p>
-              <p class="card--overview--large-text">100.000$</p>
-            </div>
-            <div class="card card--overview">
-              <p class="subheading">Total net value</p>
-              <p class="card--overview--large-text">100.000$</p>
-            </div>
-            <div class="card card--overview">
-              <p class="subheading">Total net value</p>
-              <p class="card--overview--large-text">100.000$</p>
-            </div>
-            <div class="card card--overview">
-              <p class="subheading">Total net value</p>
-              <p class="card--overview--large-text">100.000$</p>
-            </div>
-            <div class="card card--overview">
-              <p class="subheading">Total net value</p>
-              <p class="card--overview--large-text">100.000$</p>
-            </div>
-            <div class="card card--overview">
-              <p class="subheading">Total net value</p>
-              <p class="card--overview--large-text">100.000$</p>
-            </div>
+          <p class="subheading">Upload</p>
+          <div class="content-upload-area">
+            <p>Drop your transactions CSV here</p>
           </div>
-          <p class="main-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Aspernatur, ab. Mollitia nam repellat id cumque quam omnis odit fuga
-            error? Modi molestiae vitae cupiditate esse quia laborum
-            voluptatibus error minus obcaecati, culpa eligendi aliquam cumque
-            corporis. Alias incidunt vitae temporibus eligendi, tempora aut
-            veniam fugit. Odio ducimus ea ipsa facilis reprehenderit minus porro
-            voluptatem quod rerum atque alias est quidem, vitae quisquam aliquid
-            quae consequatur adipisci iure neque, sint architecto blanditiis,
-            eius nostrum? Consequuntur sunt nesciunt animi nulla, tempore autem
-            quam molestias? Repellat molestiae velit sit possimus voluptatibus
-            voluptas deleniti modi, facilis quis! Reiciendis amet rerum adipisci
-            iure quas assumenda odit accusamus, eveniet, expedita, libero
-            dignissimos mollitia quis ipsam quam. Itaque eligendi illo ratione
-            sit tenetur nam molestiae qui numquam saepe perferendis facilis
-            praesentium fugit enim illum, quos, impedit vel expedita quis id et
-            dignissimos harum iste sapiente adipisci! Adipisci non voluptas hic
-            cum quis explicabo, officia veritatis reiciendis corrupti. Corporis
-            facilis illum eveniet deserunt iste labore sint doloribus tenetur.
-            Veniam cumque velit ipsam iusto nisi odio! Qui repellat voluptates
-            libero ab, nobis quod dolor asperiores, iste mollitia at laudantium
-            nulla eaque dicta minima? Sapiente provident libero ipsum reiciendis
-            id optio ea deleniti maxime error sit nemo voluptate, tenetur
-            veritatis minus perferendis eius. Explicabo ipsam voluptatum odio,
-            repellendus recusandae praesentium ut. Dolor numquam animi, quasi
-            minima totam alias rerum repudiandae, iure sint quas voluptatibus
-            fugit porro ad beatae modi. Eligendi.
-          </p>
+          <div class="content-upload-area--btns">
+            <button class="btn--primary subheading">Choose file</button>
+            <button class="btn--primary subheading">Upload</button>
+          </div>
+
+          <section class="section-wallet-warning">
+            <p class="subheading">Friendly warning</p>
+            <p class="section-wallet-warning--text">
+              Do not share your nexo.io login or any wallet details. This app
+              only uses the exported transactions .csv file.
+            </p>
+          </section>
+
+          <section class="features-section">
+            <p class="subheading">Features</p>
+            <div class="features--lists">
+              <ul class="features--list card">
+                <li class="features-list--item">
+                  <i class="ph-check-light"></i
+                  ><span>Historic portfolio value graph generation</span>
+                </li>
+                <li class="features-list--item">
+                  <i class="ph-check-light"></i
+                  ><span>Transaction tracking</span>
+                </li>
+                <li class="features-list--item">
+                  <i class="ph-check-light"></i
+                  ><span
+                    >Transaction linkage to blockchain explorer (TX
+                    linkage)</span
+                  >
+                </li>
+                <li class="features-list--item">
+                  <i class="ph-check-light"></i
+                  ><span>Overview and graph generation</span>
+                </li>
+                <li class="features-list--item">
+                  <i class="ph-check-light"></i><span>Open source</span>
+                </li>
+              </ul>
+              <ul class="features--list card">
+                <li class="features-list--item">
+                  <i class="ph-check-light"></i
+                  ><span>Coinlist, including earned in-kind</span>
+                </li>
+                <li class="features-list--item">
+                  <i class="ph-check-light"></i
+                  ><span
+                    >Portfolio value determination using exchange APIs</span
+                  >
+                </li>
+                <li class="features-list--item">
+                  <i class="ph-check-light"></i><span>Referral Bonus</span>
+                </li>
+                <li class="features-list--item">
+                  <i class="ph-check-light"></i
+                  ><span>Pending transactions</span>
+                </li>
+                <li class="features-list--item">
+                  <i class="ph-check-light"></i><span>...and more to come</span>
+                </li>
+              </ul>
+            </div>
+          </section>
         </main>
       </div>
 
